--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -13,7 +13,146 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralWidget"/>
+  <widget class="QWidget" name="centralWidget">
+   <widget class="QPushButton" name="SendButton">
+    <property name="geometry">
+     <rect>
+      <x>1040</x>
+      <y>680</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>发送</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>258</width>
+      <height>741</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout" rowstretch="0,4,1,2,0">
+     <item row="4" column="0">
+      <widget class="QTableWidget" name="UserInfo">
+       <property name="showGrid">
+        <bool>false</bool>
+       </property>
+       <row>
+        <property name="text">
+         <string>id</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>昵称</string>
+        </property>
+       </row>
+       <column>
+        <property name="text">
+         <string>个人信息</string>
+        </property>
+       </column>
+       <item row="0" column="0">
+        <property name="text">
+         <string>123</string>
+        </property>
+       </item>
+       <item row="1" column="0">
+        <property name="text">
+         <string>123</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QListWidget" name="FriendList"/>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>好友列表</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="2" column="0">
+      <widget class="QPushButton" name="addFriendButton">
+       <property name="text">
+        <string>添加好友</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>10</y>
+      <width>681</width>
+      <height>711</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout_2" rowstretch="5,0,0,0">
+     <item row="1" column="0">
+      <spacer name="verticalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="3" column="0">
+      <widget class="QTextEdit" name="ChatLine"/>
+     </item>
+     <item row="0" column="0">
+      <widget class="QTextEdit" name="ChatBox"/>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QComboBox" name="Channel">
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>500</y>
+      <width>91</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>公屏</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>私聊</string>
+     </property>
+    </item>
+   </widget>
+  </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -29,7 +168,7 @@
      <x>0</x>
      <y>0</y>
      <width>1200</width>
-     <height>17</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
